--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -31,8 +31,8 @@
                 </div>
                 <div id="direita">
                     <button><a href="home.html">Home</a></button>
-                    <button><a href="">Quem Somos</a></button>
-                    <button><a href="">Bartenders</a></button>
+                    <button><a href="pages/about/about.html">Quem Somos</a></button>
+                    <button><a href="pages/bartenders/bartenders.html">Bartenders</a></button>
                 </div>
             </nav>
         </header>
@@ -97,7 +97,8 @@
         <footer>
             <p>Diogo Rodrigues © 2024</p>
         </footer>
-        <script src="navbar.js"></script>
+        <script src="navbarScroll.js"></script>
+        <script src="navbarMobile.js"></script>
         <script src="slideshow.js"></script>
     </body>
 </html>
