--- a/pages/bartender/bartender.html
+++ b/pages/bartender/bartender.html
@@ -38,7 +38,7 @@
     </header>
 
     <footer>
-        <p>Diogo Rodrigues © 2024</p>
+        <a href="https://github.com/odiogorodriigues">Diogo Rodrigues © 2024</p>
     </footer>
     <script src="../../navbarMobile.js"></script>
 </body>
