--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <header>
             <nav>
                 <div id="esquerda">
-                    <h1>BARTENDER’S CHOICE</h1>
+                    <h1><a href="">BARTENDER’S CHOICE</a></h1>
                 </div>
                 <div class="mobile-menu">
                     <div class="line1"></div>
@@ -30,7 +30,7 @@
                     <div class="line3"></div>
                 </div>
                 <div id="direita">
-                    <button><a href="home.html">Home</a></button>
+                    <button><a href="index.html">Home</a></button>
                     <button><a href="pages/about/about.html">Quem Somos</a></button>
                     <button><a href="pages/bartenders/bartenders.html">Bartenders</a></button>
                 </div>
@@ -91,7 +91,7 @@
         </div>
 
         <div id="button-bartenders">
-            <button><a href="bartenders.html">Conheça nossa lista de Bartenders</a></button>
+            <button><a href="pages/bartenders/bartenders.html">Conheça nossa lista de Bartenders</a></button>
         </div>
 
         <footer>
