--- a/pages/bartender/bartender.html
+++ b/pages/bartender/bartender.html
@@ -22,7 +22,7 @@
     <header>
         <nav>
             <div id="esquerda">
-                <h1>BARTENDER’S CHOICE</h1>
+                <h1><a href="../../index.html">BARTENDER’S CHOICE</a></h1>
             </div>
             <div class="mobile-menu">
                 <div class="line1"></div>
@@ -36,6 +36,10 @@
             </div>
         </nav>
     </header>
+
+    <main>
+        
+    </main>
 
     <footer>
         <a href="https://github.com/odiogorodriigues">Diogo Rodrigues © 2024</p>
