--- a/pages/bartenders/bartenders.html
+++ b/pages/bartenders/bartenders.html
@@ -26,7 +26,7 @@
         <header>
             <nav>
                 <div id="esquerda">
-                    <h1>BARTENDER’S CHOICE</h1>
+                    <h1><a href="../../index.html">BARTENDER’S CHOICE</a></h1>
                 </div>
                 <div class="mobile-menu">
                     <div class="line1"></div>
