--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -137,7 +137,7 @@
         </div>
 
         <footer>
-            <a href="https://github.com/odiogorodriigues">Diogo Rodrigues © 2024</p>
+            <a href="https://github.com/odiogorodriigues">Diogo Rodrigues © 2024</a>
         </footer>
         <script src="../../navbarMobile.js"></script>
     </body>
