--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </div>
 
         <footer>
-            <a href="https://github.com/odiogorodriigues">Diogo Rodrigues © 2024</p>
+            <a href="https://github.com/odiogorodriigues">Diogo Rodrigues © 2024</a>
         </footer>
         <script src="navbarScroll.js"></script>
         <script src="navbarMobile.js"></script>
