--- a/pages/bartender/bartender.html
+++ b/pages/bartender/bartender.html
@@ -1,49 +1,60 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bartender’s Choice</title>
-    <link rel="shortcut icon" href="../../img/icon.svg" type="image/x-icon" />
-    <link rel="stylesheet" href="../../global.css" />
-    <link rel="stylesheet" href="bartender.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-        href="https://fonts.googleapis.com/css2?family=Ewert&display=swap"
-        rel="stylesheet"
-    />
-    <link
-        href="https://fonts.googleapis.com/css?family=Source Serif Pro"
-        rel="stylesheet"
-    />
-</head>
-<body>
-    <header>
-        <nav>
-            <div id="esquerda">
-                <h1><a href="../../index.html">BARTENDER’S CHOICE</a></h1>
-            </div>
-            <div class="mobile-menu">
-                <div class="line1"></div>
-                <div class="line2"></div>
-                <div class="line3"></div>
-            </div>
-            <div id="direita">
-                <button><a href="../../index.html">Home</a></button>
-                <button><a href="../about/about.html">Quem Somos</a></button>
-                <button><a href="../bartenders/bartenders.html">Bartenders</a></button>
-            </div>
-        </nav>
-    </header>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Bartender’s Choice</title>
+        <link
+            rel="shortcut icon"
+            href="../../img/icon.svg"
+            type="image/x-icon"
+        />
+        <link rel="stylesheet" href="../../global.css" />
+        <link rel="stylesheet" href="bartender.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Ewert&display=swap"
+            rel="stylesheet"
+        />
+        <link
+            href="https://fonts.googleapis.com/css?family=Source Serif Pro"
+            rel="stylesheet"
+        />
+    </head>
+    <body>
+        <header>
+            <nav>
+                <div id="esquerda">
+                    <h1><a href="../../index.html">BARTENDER’S CHOICE</a></h1>
+                </div>
+                <div class="mobile-menu">
+                    <div class="line1"></div>
+                    <div class="line2"></div>
+                    <div class="line3"></div>
+                </div>
+                <div id="direita">
+                    <button><a href="../../index.html">Home</a></button>
+                    <button>
+                        <a href="../about/about.html">Quem Somos</a>
+                    </button>
+                    <button>
+                        <a href="../bartenders/bartenders.html">Bartenders</a>
+                    </button>
+                </div>
+            </nav>
+        </header>
 
-    <main>
-        
-    </main>
+        <main>
+            
+        </main>
 
-    <footer>
-        <a href="https://github.com/odiogorodriigues">Diogo Rodrigues © 2024</p>
-    </footer>
-    <script src="../../navbarMobile.js"></script>
-</body>
+        <footer>
+            <a href="https://github.com/odiogorodriigues"
+                >Diogo Rodrigues © 2024</a
+            >
+        </footer>
+        <script src="../../navbarMobile.js"></script>
+        <script src="mainBartender.js"></script>
+    </body>
 </html>
