--- a/pages/bartenders/bartenders.html
+++ b/pages/bartenders/bartenders.html
@@ -165,7 +165,7 @@
         </main>
 
         <footer>
-            <a href="https://github.com/odiogorodriigues">Diogo Rodrigues © 2024</p>
+            <a href="https://github.com/odiogorodriigues">Diogo Rodrigues © 2024</a>
         </footer>
         <script src="../../navbarMobile.js"></script>
         <script src="showBartender.js"></script>
